--- a/templates/default/user_bill.html.twig
+++ b/templates/default/user_bill.html.twig
@@ -1,7 +1,7 @@
 <style>
 {{ css }}
 </style>
-<div class='container-fluid'><div class='span12'>
+<div class='container-fluid'><div class='col-sm-12 col-md-12 col-lg-12 col-xl-12'>
 <br>
 <p>{{ full_name }}, </p>
 <p>Below is your bill.  You can go to <a href='{{ website_url }}'>{{ website_url }}</a>
@@ -16,7 +16,7 @@ to view a detail listing of your jobs.
 <h4>Cluster Usage</h4>
 
 <p>
-<table class='table table-striped table-bordered table-condensed'>
+<table class='table table-bordered table-sm table-stripped'>
 <thead>
 <th>Queue</th>
 <th>Project</th>
@@ -25,6 +25,7 @@ to view a detail listing of your jobs.
 <th>CFOP</th>
 <th>Activity Code</th>
 </thead>
+<tbody>
 {% for row in jobs_table %}
 	<tr>
 		<td> {{ jobs_table.queue }} </td>
@@ -35,12 +36,13 @@ to view a detail listing of your jobs.
 		<td> {{ jobs_table.activity }} </td>
 	</tr>
 {% endfor %}
+</tbody>
 </table>
 
 <h4>Data Usage</h4>
 
 <p>
-<table class='table table-striped table-bordered table-condensed'>
+<table class='table table-bordered table-sm table-stripped'>
 <thead>
 <th>Directory</th>
 <th>Cost ($/TB)</th>
@@ -51,9 +53,9 @@ to view a detail listing of your jobs.
 <th>CFOP</th>
 <th>Activity Code</th>
 </thead>
-
+<tbody>
 {{ data_table }}
-
+</tbody>
 </table>
 
 </div>
