Fixed bugs in editting projects Updated email billing twig template

--- a/templates/default/user_bill.html.twig
+++ b/templates/default/user_bill.html.twig
@@ -7,6 +7,8 @@
 <p>{{ full_name }}, </p>
 <p>Below is your bill.  You can go to <a href='{{ website_url }}'>{{ website_url }}</a>
 to view a detail listing of your jobs.
+<br>If you are a supervisor, you can login to the accounting site to view details of your students/workers billing.
+<br>If you want to update your CFOP or close your account, please email us at <a href='mailto:{{ admin_email }}'>{{admin_email}}</a>.
 <p>
 <br>Name: {{ full_name }}
 <br>Username: {{ username }}
