--- a/templates/default/user_bill.html.twig
+++ b/templates/default/user_bill.html.twig
@@ -12,8 +12,8 @@ to view a detail listing of your jobs.
 <p>
 <br>Name: {{ full_name }}
 <br>Username: {{ username }}
-<br>Start Date: {{ start_date }}
-<br>End Date: {{ end_date }}
+<br>Month: {{ month }}
+<br>Year: {{ year }}
 <br>Number of Jobs: {{ num_jobs }}
 
 <h4>Cluster Usage</h4>
